@@ -2,6 +2,7 @@ package com.sentientsimulations.projectzomboid.survivorlootrespawn;
 
 import static io.pzstorm.storm.logging.StormLogger.LOGGER;
 
+import com.sentientsimulations.projectzomboid.survivorlootrespawn.patch.RemoveInventoryItemFromContainerPacketPatch;
 import io.pzstorm.storm.core.StormClassTransformer;
 import io.pzstorm.storm.event.core.StormEventDispatcher;
 import io.pzstorm.storm.mod.ZomboidMod;
@@ -17,7 +18,7 @@ public class SurvivorLootRespawnMod implements ZomboidMod {
             return;
         }
         LOGGER.debug("Registering event handler for {}", SurvivorLootRespawnMod.class.getName());
-        StormEventDispatcher.registerEventHandler(this);
+        StormEventDispatcher.registerEventHandler(ContainerLootedHandler.class);
     }
 
     @Override
@@ -25,6 +26,6 @@ public class SurvivorLootRespawnMod implements ZomboidMod {
         if (!StormEnv.isStormServer()) {
             return Collections.emptyList();
         }
-        return Collections.emptyList();
+        return List.of(new RemoveInventoryItemFromContainerPacketPatch());
     }
 }
